2005-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-generate-default-type): Add doc string.
	(mml-generate-mime-1): Use mm-default-file-encoding or make it
	default to application/octet-stream when determining the content
	type if it is not specified for the part or the mml contents; add
	a comment about mml-generate-default-type.

2005-07-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-generate-mime-1): Use mm-default-file-encoding or
	make it default to application/octet-stream when determining the
	content type if it is not specified for the external contents.

2005-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Take care that not only a
	segmented parameter but also other parameters might be there.

2005-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-display-external): Delete temp file, directory
	and buffer immediately if the external process is exited.

2005-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page-1): Don't scroll if there're
	fewer lines than that of scroll-margin.
	(gnus-article-prev-page): Narrow the range to bind scroll-in-place.

2005-07-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page): Revert.
	(gnus-article-beginning-of-window): New macro.
	(gnus-article-next-page-1): Use it.
	(gnus-article-prev-page): Ditto.
	(gnus-article-edit-part): Use insert-buffer-substring instead of
	insert-buffer.
	(gnus-article-edit-exit): Ditto.

	* gnus-util.el (gnus-beginning-of-window): Remove.
	(gnus-end-of-window): Remove.

	* lpath.el: Don't bind header-line-format and scroll-margin.

2005-07-25  Simon Josefsson  <jas@extundo.com>

	* pgg.el (pgg-insert-url-with-w3): Don't load w3, it is possible
	to have the url package without w3.  Reported by Daiki Ueno
	<ueno@unixuser.org> and Luigi Panzeri <matley@muppetslab.org>.

2005-07-20  Didier Verna  <didier@xemacs.org>

	* gnus-diary.el: Remove the description comment (nndiary is now